force-app/main/default/objects/sugati__None_Licenseable_Protection_Cost__c/sugati__None_Licenseable_Protection_Cost__c.object-meta.xml
<CustomObject>
    <label>None Licenseable Protection Cost</label>
    <nameField>
        <displayFormat>NLP-{0000000000}</displayFormat>
        <label>None Licenseable Protection Cost ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>None Licenseable Protection Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>