force-app/main/default/objects/sugati__None_Licenseable_Protection_Cost__c/fields/sugati__NLPC_Low_Band__c.field-meta.xml
<CustomField>
    <fullName>sugati__NLPC_Low_Band__c</fullName>
    <label>Low Band</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>