force-app/main/default/objects/sugati__None_Licenseable_Protection_Cost__c/fields/sugati__NLPC_Premium_PP__c.field-meta.xml
<CustomField>
    <fullName>sugati__NLPC_Premium_PP__c</fullName>
    <label>Premium PP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>