force-app/main/default/objects/sugati__None_Licenseable_Protection_Cost__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>sugati__NLPC_Low_Band__c</columns>
    <columns>sugati__NLPC_High_Band__c</columns>
    <columns>sugati__NLPC_Premium_PP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>